--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/evanaze"
+    - label: "Medium"
+      icon: "fab fa-fw fa-medium"
+      url: "https://medium.com/@evanazevedo"
 
 # Site Footer
 footer:
