--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ name                     : "Evan Azevedo"
 description              : "Data Science Portfolio"
 url                      : "https://evanaze.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : evanaze/evanaze.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "evanaze/evanaze.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/greater-than-solid.svg"
+logo                     : "/assets/images/greater-than-solid.pdf"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
