--- a/_config.yml
+++ b/_config.yml
@@ -300,10 +300,10 @@ defaults:
       layout: single
       author_profile: true
 
-  # _portfolio
+  # _projects
   - scope:
       path: ""
-      type: portfolio
+      type: projects
     values:
       layout: single
       author_profile: true
