adding twitch stream

--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,9 @@ author:
     - label: "Medium"
       icon: "fab fa-fw fa-medium"
       url: "https://medium.com/@evanazevedo"
+    - label: "Twitch"
+      icon: "fab fa-fw fa-twitch"
+      url: "https://www.twitch.tv/evanaze"
 
 # Site Footer
 footer:
