--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ author:
       icon: "fab fa-fw fa-medium"
       url: "https://medium.com/@evanazevedo"
     - label: "Twitch"
-      icon: "fab fa-fw fa-twitch"
+      icon: "fab fa-twitch"
       url: "https://www.twitch.tv/evanaze"
 
 # Site Footer
